canvas overflow bug fixed

--- a/src/Components/Design/Canvas/Canvas.scss
+++ b/src/Components/Design/Canvas/Canvas.scss
@@ -6,4 +6,8 @@
     .side-bar-wrapper {
       padding-bottom: 0 !important;
     }
+    .design-canvas-wrapper {
+      flex: 1 1 auto;
+      overflow: auto;
+    }
 }
